# BasisUniversal.NET

./: .gitignore  BasisUniversal.NET.slnx  README.md  THIRD-PARTY-NOTICES.md
.github/workflows/: ci.yml
native/: CMakeLists.txt  basisu_net.cpp
runtimes/ios/native/basisu.framework/: Info.plist  basisu
runtimes/ios/native/basisu.framework/_CodeSignature/: CodeResources
runtimes/iossimulator/native/basisu.framework/: Info.plist
runtimes/iossimulator/native/basisu.framework/_CodeSignature/: CodeResources
scripts/: build-native-windows.ps1  build-native.sh
src/BasisUniversal.NET/: BasisCompressionFlags.cs  BasisDecodeFlags.cs  BasisEncoderOptions.cs  BasisKtx2Info.cs  BasisKtx2LevelInfo.cs  BasisKtx2Texture.cs  BasisNative.cs  BasisTextureFormat.cs  BasisUniversal.NET.csproj  BasisUniversalCodec.cs  BasisUniversalException.cs  TranscodedImage.cs  TranscoderTextureFormat.cs
src/BasisUniversal.NET.LowLevel/: BasisUniversal.NET.LowLevel.csproj  Basisu.cs
src/BasisUniversal.Native/: BasisUniversal.Native.csproj  BasisUniversal.Native.nuspec
src/BasisUniversal.Native/buildTransitive/netstandard2.1/: BasisUniversal.Native.targets
src/BasisUniversal.NativeAssets.Android/: BasisUniversal.NativeAssets.Android.csproj
src/BasisUniversal.NativeAssets.Linux/: BasisUniversal.NativeAssets.Linux.csproj
src/BasisUniversal.NativeAssets.Linux/buildTransitive/netstandard2.1/: BasisUniversal.NativeAssets.Linux.targets
src/BasisUniversal.NativeAssets.iOS/: BasisUniversal.NativeAssets.iOS.csproj  BasisUniversal.NativeAssets.iOS.nuspec
src/BasisUniversal.NativeAssets.macOS/: BasisUniversal.NativeAssets.macOS.csproj
src/BasisUniversal.NativeAssets.macOS/buildTransitive/netstandard2.1/: BasisUniversal.NativeAssets.macOS.targets
tests/BasisUniversal.NET.Tests/: BasisUniversal.NET.Tests.csproj  BasisUniversalCodecTests.cs
